Fix a crash when updating the source of the file layer externally

It only happens with the file layers in the clipboard, because they don't
have any image attached. Theoretically, it could also happen if the layer
was dangling on some widget after the image has been closed. Though the
latter case is rather improbable.

Steps to reproduce:

1) Create a file later **that scales the source image into the
   image size**.
2) Copy this layer into the clipboard by "Copy Layer" action
3) Close the image
4) Modify the source of the file layer externally

BUG:446209